2019-10-23 Jan Kotanski <jan.kotanski@desy.de>
	* add selection of image source widgets
	* add selection of tool widgets
	* show real frame rate
	* tagged as 2.18.0

2019-10-17 Jan Kotanski <jan.kotanski@desy.de>
	* catch expceptions from getHistogram
	* tagged as 2.17.2

2019-10-15 Jan Kotanski <jan.kotanski@desy.de>
	* add requests to dependences
	* tagged as 2.17.1

2019-10-11 Jan Kotanski <jan.kotanski@desy.de>
	* add posibility to switch off default hidra detector server list
	* fix for disable Start button just after initialization
	* tagged as 2.17.0

2019-10-10 Jan Kotanski <jan.kotanski@desy.de>
	* updateLayout of sourceGroupBox on lavue start
	* tagged as 2.16.3

2019-10-10 Jan Kotanski <jan.kotanski@desy.de>
	* update README
	* tagged as 2.16.2

2019-10-10 Jan Kotanski <jan.kotanski@desy.de>
	* add support for pip
	* tagged as 2.16.1

2019-10-08 Jan Kotanski <jan.kotanski@desy.de>
	* add DOOCS Property image source
	* tagged as 2.16.0

2019-09-27 Jan Kotanski <jan.kotanski@desy.de>
	* fix for slider 0 flame number
	* tagged as 2.15.1

2019-09-20 Jan Kotanski <jan.kotanski@desy.de>
	* set maximal auto factor
	* fix roi order labels after fetch
	* add storing DetectorROIsOrder in sardana
	* tagged as 2.15.0

2019-09-19 Jan Kotanski <jan.kotanski@desy.de>
	* set maximal auto factor
	* fix roi order labels after fetch
	* tagged as 2.14.2

2019-09-12 Jan Kotanski <jan.kotanski@desy.de>
	* allow for communication with AnalysisServer without sardana
	* tagged as 2.14.1

2019-08-16 Jan Kotanski <jan.kotanski@desy.de>
	* add MemoPlotWidget and MemoExportDialog for params bookkeeping
	* tagged as 2.14.0

2019-08-15 Jan Kotanski <jan.kotanski@desy.de>
	* switch off autolevels from pyqtgraph
	* tagged as 2.13.6

2019-07-11 Jan Kotanski <jan.kotanski@desy.de>
	* fix for setting channel after RGB
	* tagged as 2.13.5

2019-07-03 Jan Kotanski <jan.kotanski@desy.de>
	* fix crash changing scope out projection
	* tagged as 2.13.4
