@@ -2,6 +2,7 @@
 	* add selection of image source widgets
 	* add selection of tool widgets
 	* show real frame rate
+	* add bounds to projections tools
 	* tagged as 2.18.0
 
 2019-10-17 Jan Kotanski <jan.kotanski@desy.de>
